# era-zkevm_circuits

./: Cargo.toml
src/: lib.rs
src/bn254/: README.md  mod.rs  test_utils.rs  validation.rs
src/bn254/ec_add/: implementation.rs  input.rs  mod.rs  test.rs
src/bn254/ec_mul/: implementation.rs  input.rs  mod.rs  test.rs
src/bn254/ec_pairing/: final_exp.rs  implementation.rs  input.rs  mod.rs
src/bn254/sage/: pairing.sage.py
src/bn254/tests/: .gitignore  README.md  algebraic_torus.rs  comparison.rs  ec_add.rs  ec_mul.rs  ec_pairing.rs  field_extensions.rs  fq2.rs  mod.rs  types.rs  utils.rs  validation.rs
src/bn254/tests/json/: decomposition_tests.json  ecadd_tests.json  ecmul_tests.json  fq12_tests.json  fq2_tests.json  fq6_tests.json  g2_tests.json  mod.rs  types.rs
src/bn254/tests/json/algebraic_torus/: mod.rs  torus_tests.json
src/bn254/tests/json/ec_add/: ecadd_tests.json  mod.rs
src/bn254/tests/json/ec_mul/: decomposition_tests.json  ecmul_tests.json  mod.rs
src/bn254/tests/json/ec_pairing/: g2_tests.json  (+5 more)
src/bn254/tests/sage/: ec_add.sage  ec_pairing.sage  field_extensions.sage  line_function.sage  torus.sage
src/bn254/tests/utils/: assert.rs  cs.rs
src/demux_log_queue/: mod.rs
src/modexp/: .gitignore  implementation.rs  input.rs  mod.rs  modexp.sage  test.rs
src/modexp/implementation/: mod.rs  u2048.rs  u256.rs
src/modexp/tests_json/: gen.sage  mod.rs  modexp_tests.json  modmul_256_bytes_tests.json  modmul_32_bytes_tests.json  modmul_tests.json  u2048.rs  u256.rs
src/recursion/: mod.rs
src/scheduler/: auxiliary.rs  input.rs  mod.rs
(+4 files in other folders)
