[package]
name = "zkevm_circuits"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.4"
smallvec = { version = "*", features = [
    "const_generics",
    "const_new",
    "serde",
] }
arrayvec = "0.7"

# TODO: change to use matter-labs when everything is merged:
# zkevm_opcode_defs = {git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "dl-precompiles"}
zkevm_opcode_defs = {git = "https://github.com/distributed-lab/era-zkevm_opcode_defs.git", branch = "feature/ec-and-modexp-precompiles"}
# zkevm_opcode_defs = {path = "../era-zkevm_opcode_defs"}

# TODO: change to use matter-labs when everything is merged:
# boojum = {git = "https://github.com/matter-labs/era-boojum.git", branch = "dl-precompiles"}
boojum = {git = "https://github.com/distributed-lab/era-boojum.git", branch = "feature/bn254-ec-pairing"}
# boojum = { path = "../era-boojum" }

cs_derive = { git = "https://github.com/matter-labs/era-boojum.git", branch = "main" }
# cs_derive = { path = "../era-boojum/cs_derive" }

serde_json = "*"
bincode = "*"
itertools = "0.10"
rand_new = { package = "rand", version = "0.8" }
hex = "*"
seq-macro = "0.3"
lazy_static = "1.4.0"

[features]
default = []
log_tracing = ["boojum/log_tracing"]
verbose_circuits = []

[dev-dependencies]
hex = "*"
